--- a/src/components/ImageView.css
+++ b/src/components/ImageView.css
@@ -48,14 +48,6 @@
     color: inherit;
 }
 
-#imagedivboxcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    max-width: 80vw;
-}
-
 .directionarrows {
     cursor: pointer;
     position: relative;
@@ -63,23 +55,15 @@
     min-width: 30px;
 }
 
+.directionarrowscontainercontainer {
+    width: 10vw;
+}
+
 .directionarrowscontainer {
     display: flex; 
     justify-content: center;
     align-items: center;
     padding: 0px;
-}
-
-.infoviewingimage {
-    top: 50%; 
-    max-width: 80vw; 
-    max-height: 80vh; 
-    align-self: left;
-}
-
-.imageviewingcontainer {
-    align-self: center;
-    max-width: 80vw; 
 }
 
 .col-xl-6, .col-sm-12, .col-lg-12, .col-12, .col-md-12, .col-xs-12, .container {
@@ -92,15 +76,9 @@
     margin-right: 0px!important; 
 }
 
-.infoviewingimage {
-    max-width: 80vw; 
-    align-self: center;
-    
-}
 .infotext {
     top: 5%;
     height: 40vh;
-    font-size: 12px;
     text-align: center;
     color: darkslategrey; 
 }
@@ -115,6 +93,10 @@
     justify-content: space-between;
 }
 
+.infoline {
+    margin-bottom: 24px;
+}
+
 @media only screen and (orientation: portrait) {
     #frame {
          flex-direction: column;
@@ -122,7 +104,12 @@
     .directionarrows {
         top: 25%;
     }
-    
+    .infoline {
+        margin-bottom: 14px;
+    }
+    .viewingimage {
+        max-width: 90vw;
+    }
 }
 
 @media only screen and (orientation: landscape) {
@@ -168,12 +155,6 @@
     }
 }  
 
-@media only screen and (orientation: landscape) and (max-width: 1300px) {
-    .infotext {
-        padding-left: 30px;
-    }
-}
-
 @media only screen and (orientation: landscape) and (max-height: 450px) {
     #frame {
         flex-direction: column; 
@@ -182,7 +163,6 @@
         top: 1%;
         width: 100%;
         height: 40vh;
-        font-size: 12px;
         text-align: center;
         color: darkslategrey; 
     }
@@ -205,17 +185,12 @@
 
 @media only screen and (min-width: 1500px) {
     .infoviewingimage {
-        max-width: 80vw; 
         align-self: center;
-    }
-    #frame {
-        justify-content: space-around;
     }
 } 
 
 @media only screen and (min-width: 1800px) {
     .infoviewingimage {
-        max-width: 80vw; 
         align-self: center;
         
     }
@@ -223,7 +198,6 @@
 
 @media only screen and (min-width: 2400px) {
     .infoviewingimage {
-        max-width: 80vw; 
         align-self: center;
         
     }
